<resources>
    <string name="app_name">Health Plus</string>
    <string name="web_client_id">400785403641-hubdj9pklas5iriir55gretp0eql04di.apps.googleusercontent.com</string>
    <string name="title_activity_home">Medications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="please_add_doctors">Please add Doctors</string>
    <string name="call">Call</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="authentication_failed">"Authentication failed."</string>
    <string name="name">Name</string>
    <string name="fever">Fever</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="sms">SMS</string>
    <string name="add_medication">Add Medication</string>
    <string name="sign_in_google">Sign in via Google</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_add_medications">Add Medications</string>
    <string name="add_a_doctor">Add a doctor</string>
    <string name="add_prescriptions">Add prescriptions</string>
    <string name="add_lab_reports">Add lab reports</string>
    <string name="add_medication_image">Add medication image</string>
    <string name="problem">Problem for which you are taking Medication</string>
    <string name="title_activity_add_doctor">Add Doctor</string>
    <string name="title_activity_detail">Detail</string>
    <string name="camera">Camera</string>
    <string name="file">File</string>
    <string name="save">Save</string>
    <string name="sign_in_failed">"Sign In failed, Network problem"</string>
    <string name="error_retreiving_data">"Error retreiving data"</string>
    <string name="data_stored_successfully">"Data restored successfully"</string>
    <string name="file_not_supported">"File type not supported"</string>
    <string name="error_name">"Please enter name"</string>
    <string name="error_phone_number">"Please enter phone number"</string>
    <string name="error_email">"Please enter email id"</string>
    <string name="error_address">"Please enter address"</string>
    <string name="picture_taken">"Picture taken"</string>
    <string name="file_selected">"File Selected"</string>
    <string name="error_save_data_db">"Error saving data in db"</string>
    <string name="view_more">View More</string>

</resources>
